--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYOE html>
 <html lang="en">
 <body>
-<h1>WELCOME!</h1>
-<ul>
-<li>this is the first one</li>
-<li>this is the second!</li>
+<h1><strong>BEHOLD!!!</strong></h1>
+  <P>my <em>awesome</em> debut☆</P>
+  <h2>my plans</h2>
+  <ul>
+  
+<li>adding more <em>images!!!!</em></li>
+<li>spreading this link!!</li>
 </ul>
+  <input type="checkbox" checked>
 </body>
 </html>
