--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <li>adding more <em>images!!!!</em></li>
 <li>spreading this link!!</li>
 </ul>
-  <input type="checkbox" checked>
+  <input type="checkbox" /checked>
 </body>
 </html>
