--- a/index.html
+++ b/index.html
@@ -2,18 +2,24 @@
 <html lang="en">
 <body>
 <h1><strong>BEHOLD!!!</strong></h1>
-  <P>my <em>awesome</em> debut</P>
+  <p>my <em>awesome</em> debut</p>
+  
+  <p>
   <img src="images/dad.jpg" alt="my dad" width="200" height="200" >
     <p>this is my mom and dad!</p> 
   <img src="images/mom.jpg" alt="my mom"  width="200" height="200">
-    
+  </p>
+
+  <p>
   <img src="images/dog.jpg" alt="my dog"  width="200" height="200">
   <p> ... and this is my dog and myself!!</p> 
   <img src="images/me.jpg" alt="me"  width="200" height="200">
-  
+  </p>
+
+  <p>
   <img src="images/snowman.jpg" alt="trusty snowman"  width="200" height="200">
   <p> This is a trusty snowman. He's probably soaked by now, but he's trust-worthy </p>
-  
+  </p>
   <h2>my plans</h2>
   <ul>
   
