attempt-aligning text

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <h1><strong>BEHOLD!!!</strong></h1>
   <p>my <em>awesome</em> debut</p>
   
-  <p>
-  <img src="images/dad.jpg" alt="my dad" width="200" height="200" >
-    <p>this is my mom and dad!</p> 
-  <img src="images/mom.jpg" alt="my mom"  width="200" height="200">
-  </p>
+    <div>
+  <img src="images/mom.jpg" alt="my dad" width="200" height="200" style="float:left;"/>
+     <span style="float:right";>this is my mom and dad!</span>
+  <img src="images/dad.jpg" alt="my mom"  width="200" height="200">
+       </div>
 
   <p>
   <img src="images/dog.jpg" alt="my dog"  width="200" height="200">
@@ -17,7 +17,7 @@
   </p>
 
   <p>
-  <img src="images/snowman.jpg" alt="trusty snowman"  width="200" height="200">
+  <img src="images/snowman.jpg" alt="trusty snowman"  width="300" height="300">
   <p> This is a trusty snowman. He's probably soaked by now, but he's trust-worthy </p>
   </p>
   <h2>my plans</h2>
