--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
   <p>my <em>awesome</em> debut</p>
   
     <div>
-  <img src="images/mom.jpg" alt="my dad" width="200" height="200" style="float:left;"/>
+  <img src="images/mom.jpg" alt="my mom" width="200" height="200" style="float:left;"/>
      <span style="float:right";>this is my mom and dad!</span>
-  <img src="images/dad.jpg" alt="my mom"  width="200" height="200">
+  <img src="images/dad.jpg" alt="my dad"  width="200" height="200">
        </div>
 
-  <p>
-  <img src="images/dog.jpg" alt="my dog"  width="200" height="200">
-  <p> ... and this is my dog and myself!!</p> 
+   <div>
+  <img src="images/dog.jpg" alt="my dog" width="200" height="200" style="float:left;"/>
+     <span style="float:right";>...and this is my dog and myself!</span>
   <img src="images/me.jpg" alt="me"  width="200" height="200">
-  </p>
+       </div>
 
   <p>
   <img src="images/snowman.jpg" alt="trusty snowman"  width="300" height="300">
