--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   
     <div>
   <img src="images/mom.jpg" alt="my mom" width="200" height="200" style="float:left;"/>
-     <span style="float:right";>this is my mom and dad!</span>
-  <img src="images/dad.jpg" alt="my dad"  width="200" height="200">
+     <span style="float:center";>this is my mom and dad!</span>
+  <img src="images/dad.jpg" alt="my dad"  width="200" height="200" style="float:right;"/>
        </div>
 
    <div>
