--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
      <span style="float:center";>this is my mom and dad!</span>
   <img src="images/dad.jpg" alt="my dad"  width="200" height="200" style="float:right;"/>
        </div>
+<p>
 
+</p>
    <div>
   <img src="images/dog.jpg" alt="my dog" width="200" height="200" style="float:left;"/>
-     <span style="float:right";>...and this is my dog and myself!</span>
-  <img src="images/me.jpg" alt="me"  width="200" height="200">
+     <span style="float:center";>...and this is my dog and myself!</span>
+  <img src="images/me.jpg" alt="me"  width="200" height="200" style="float:right;"/>
        </div>
+<p>
 
+</p>
   <p>
   <img src="images/snowman.jpg" alt="trusty snowman"  width="300" height="300">
   <p> This is a trusty snowman. He's probably soaked by now, but he's trust-worthy </p>
