--- a/index.html
+++ b/index.html
@@ -1,17 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<body>
+<body style="background-color:powderblue";>
 <h1><strong>BEHOLD!!!</strong></h1>
   <p>my <em>awesome</em> debut</p>
-  
+<style>
+  .container {
+ display: grid;
+ align-items: center; 
+ grid-template-columns: 1fr 1fr 1fr;
+ column-gap: 5px;
+}
+
+img {
+  max-width: 100%;
+  max-height:100%;
+}
+
+.text {
+  font-size: 70px;
+}
+</style>
     <div>
   <img src="images/mom.jpg" alt="my mom" width="200" height="200" style="float:left;"/>
      <span style="float:center";>this is my mom and dad!</span>
   <img src="images/dad.jpg" alt="my dad"  width="200" height="200" style="float:right;"/>
-       </div>
-<p>
+    </div>
 
-</p>
    <div>
   <img src="images/dog.jpg" alt="my dog" width="200" height="200" style="float:left;"/>
      <span style="float:center";>...and this is my dog and myself!</span>
