--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <title>INTRODUCTION</title>  
+  <style>
+    h1{
+  text-align: center;
+}
+  </style>
+  
+  
   <head>
     <h1>Welcome to my space</h1>
   </head>
