--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   text-align: center;
 }
   </style>
-  
+  white-space: pre-line;
   
   <head>
     <h1>Welcome to my space</h1>
   </head>
-<h2>My
-Schools
-(college)
-Decision
+<h2>My\n
+Schools\n
+(college)\n
+Decision\n
 </h2>
 <input type="checkbox" checkable=false checked/><p>UCRiverside</p>
 
