--- a/index.html
+++ b/index.html
@@ -3,21 +3,18 @@
 <title>INTRODUCTION</title>  
   <style>
     h1{
-      font-family:"Times New Roman"
+      
   text-align: center;
 }
-    
-  white-space: pre-line;
   </style>
   
   <head>
-    <h1>Welcome to my space</h1>
+    <p style=font-family:"Times New Roman"><h1>Welcome to my space</h1></p>
   </head>
-<h2>My\n
-Schools\n
-(college)\n
-Decision\n
-</h2>
+<h2>My</h2>
+<h2>Schools</h2>
+  <h2>(Colleges)</h2>
+  <h2>Decision</h2>
 <input type="checkbox" checkable=false checked/><p>UCRiverside</p>
 
   <body>
