--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <title>INTRODUCTION</title>  
   <style>
+    color:#5C4033
     h1{
       
   text-align: center;
@@ -9,7 +10,7 @@
   </style>
   
   <head>
-    <p style=font-family:"Times New Roman"><h1>Welcome to my space</h1></p>
+    <p style=font:"Times New Roman"><h1>Welcome to my space</h1></p>
   </head>
 <h2>My</h2>
 <h2>Schools</h2>
