--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
       
   text-align: center;
 }
+    .newyork{
+      font-style:Times New Roman;
+    }
   </style>
   
   <head>
-    <p style=font:"Times New Roman"><h1>Welcome to my space</h1></p>
+    <h1><stronger>Welcome to my space</stronger></h1>
   </head>
 <h2>My</h2>
 <h2>Schools</h2>
@@ -18,7 +21,7 @@
   <h2>Decision</h2>
 <input type="checkbox" checkable=false checked/><p>UCRiverside</p>
 
-  <body>
+  <body style="background-color:#5C4033">
     <main>
       
   
