--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
       
   text-align: center;
 }
-    .newyork{
-      font-style:Times New Roman;
-    }
+      font-style:"Times New Roman"
+    
   </style>
   
   <head>
