--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
       
   text-align: center;
 }
-        .oblique {
-      font-style: oblique;
-    }
+       .app-frame {
+  font-family: "Comic Sans MS";
+}
   </style>
   
   <head>
-    <h1 style="font-style: oblique"><stronger>Welcome to my space</stronger></h1>
+    <h1><stronger>Welcome to my space</stronger></h1>
   </head>
-<h2 style="font-style: oblique">My</h2>
-<h2 style="font-style: oblique">Schools</h2>
-  <h2 style="font-style: oblique">(Colleges)</h2>
-  <h2 style="font-style: oblique">Decision</h2>
+<h2>My</h2>
+<h2>Schools</h2>
+  <h2>(Colleges)</h2>
+  <h2>Decision</h2>
 <input type="checkbox" checkable=false checked/><p>UCRiverside</p>
 
   <body style="background-color:#5C4033">
