--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   text-align: center;
 }
        .app-frame {
-  font-family: "Comic Sans MS";
+  font-family: "New Times Roman";
 }
   </style>
   
