--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
   text-align: center;
 }
        .app-frame {
-  font-family: "New Times Roman";
+  font-family: 'acidic';
+         src: url('iris/fonts/acidic.ttf')format('truetype');
 }
   </style>
   
   <head>
-    <h1><stronger>Welcome to my space</stronger></h1>
+    <h1 style=font-family:'acidic'><stronger>Welcome to my space</stronger></h1>
   </head>
 <h2>My</h2>
 <h2>Schools</h2>
