--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 }
        .app-frame {
   font-family: 'acidic';
-         src: url('iris/fonts/acidic.ttf')format('truetype');
+         src: url(fonts/acidic.ttf')format('truetype');
 }
   </style>
   
