--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
       
   text-align: center;
 }
-       .app-frame {
+       @font-face {
   font-family: 'acidic';
-         src="fonts/acidic.ttf";
+         src:url('/fonts/acidic.ttf') format('truetype');
 }
   </style>
   
