--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </style>
   
   <head>
+    <link href="style.css">
     <h1 style=font-family:'acidic'><stronger>Welcome to my space</stronger></h1>
   </head>
 <h2>My</h2>
