--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+-<!DOCTYPE html>
 <html lang="en">
 <title>INTRODUCTION</title>  
   <style>
@@ -7,7 +7,7 @@
       
   text-align: center;
 }
-       <link href="style.css">
+       <link rel="stylesheet" href="style.css">
   </style>
   
   <head>
