--- a/index.html
+++ b/index.html
@@ -12,19 +12,16 @@
   
   <head>
    <link rel="stylesheet" href="style.css">
-    <h1 style=font-family:'acidic'><stronger>Welcome to my space</stronger></h1>
+    <h1 style=font-family:'acidic'><stronger>Welcome to my space★</stronger></h1>
   </head>
+  <body style="background-color:#5C4033" style=font-family:'blacklisted'>
+
 <h2>My</h2>
 <h2>Schools</h2>
   <h2>(Colleges)</h2>
   <h2>Decision</h2>
 <input type="checkbox" checkable=false checked/><p>UCRiverside</p>
 
-  <body style="background-color:#5C4033">
-    <main>
-      
   
-    </main>
-    
   </body>
 </html>
