--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <title>INTRODUCTION</title>  
   <style>
-    color:#5C4033
+    style="background-color:#5C4033"
     h1{
       
   text-align: center;
@@ -14,7 +14,8 @@
    <link rel="stylesheet" href="style.css">
     <h1 style=font-family:'acidic'><stronger>Welcome to my space★</stronger></h1>
   </head>
-  <body style="background-color:#5C4033" style=font-family:'blacklisted'>
+     <link rel="stylesheet" href="style.css">
+  <body style=font-family:'blacklisted'>
 
 <h2>My</h2>
 <h2>Schools</h2>
