--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <h1 style=font-family:'acidic'><stronger>Welcome to my space★</stronger></h1>
   </head>
      <link rel="stylesheet" href="style.css">
-  <body   style="background-color:#5C4033">
+  <body   style="background-color:#5C4033" style=font-family:'blacklisted'>
 
-<h2 style=font-family:'blacklisted'>My</h2>
-<h2 style=font-family:'blacklisted'>Schools</h2>
-  <h2 style=font-family:'blacklisted'>(Colleges)</h2>
-  <h2 style=font-family:'blacklisted'>Decision</h2>
+<h2>My</h2>
+<h2>Schools</h2>
+  <h2>(Colleges)</h2>
+  <h2 >Decision</h2>
 <input type="checkbox" checkable=false checked/><p>UCRiverside</p>
 
   
