--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1 style=font-family:'acidic'><stronger>Welcome to my space★</stronger></h1>
   </head>
      <link rel="stylesheet" href="style.css">
-  <body  style=font-family:'blacklisted'>
+  <body  style=font-family:'blacklisted'   style="background-color:#5C4033">
 
 <h2>My</h2>
 <h2>Schools</h2>
