--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <h1 style=font-family:'acidic'><stronger>Welcome to my space★</stronger></h1>
   </head>
      <link rel="stylesheet" href="style.css">
-  <body  style=font-family:'blacklisted'   style="background-color:#5C4033">
+  <body  style=font-family:'blacklisted'>
+    style="background-color:#5C4033"
 
 <h2>My</h2>
-<h2>Schools</h2>
-  <h2>(Colleges)</h2>
-  <h2 >Decision</h2>
+  <h2>College</h2>
+  <h2 >Decisions</h2>
 
   
   </body>
