--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <h1 style=font-family:'acidic'><stronger>Welcome to my space★</stronger></h1>
   </head>
      <link rel="stylesheet" href="style.css">
-  <body  style=font-family:'blacklisted'>
-    style="background-color:#5C4033"
+  <body  style=font-family:'blacklisted'  background-color:#5C4033>
 
-<h2>My</h2>
+
+  <h2>My</h2>
   <h2>College</h2>
   <h2 >Decisions</h2>
 
