--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <title>INTRODUCTION</title>  
   <style>
-  
+      background-color:#5C4033
     h1{
       
   text-align: center;
@@ -15,7 +15,7 @@
     <h1 style=font-family:'acidic'><stronger>Welcome to my space★</stronger></h1>
   </head>
      <link rel="stylesheet" href="style.css">
-  <body  style=font-family:'blacklisted'  background-color:#5C4033>
+  <body  style=font-family:'blacklisted'>
 
 
   <h2>My</h2>
