--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <title>INTRODUCTION</title>  
   <style>
-      background-color:#5C4033
+     "background-color:#5C4033"
     h1{
       
   text-align: center;
