--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
       
   </style>
   
-  <head style="background-color:#5C4033">
+  <head>
+    <body bgcolor="#5C4033" >
    <link rel="stylesheet" href="style.css">
     <h1 style=font-family:'acidic'><stronger>Welcome to my space★</stronger></h1>
   </head>
