--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <head>
     <body bgcolor="#5C4033" >
    <link rel="stylesheet" href="style.css">
-    <h1 style=font-family:'acidic'><stronger>Welcome to my space★</stronger></h1>
+    <h1 style=font-family:'acidic'><stronger>Welcome to my space</stronger></h1>
   </head>
      <link rel="stylesheet" href="style.css">
   <body  style=font-family:'blacklisted'>
