--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
 
   
   </body>
-  <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fgiphy.com%2Fmedia%2F5xaOcLGvzHxDKjufnLW%2F200.webp&psig=AOvVaw0kl45c_mvOsdzj3_zqsUAL&ust=1742006098342000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCJjRkcjEiIwDFQAAAAAdAAAAABAE" alt="dancing kids">
+  <img src="https://giphy.com/gifs/thegifys-gifys-5xaOcLGvzHxDKjufnLW" alt="dancing kids"  img-align: right;>
 <input type="checkbox" checkable=false checked/><p>UCRiverside</p>
 </html>
