--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     <h1 style=font-family:'acidic'><stronger>Welcome to my space</stronger></h1>
   </head>
      <link rel="stylesheet" href="style.css">
-  <body  style=font-family:'blacklisted'>
+  <body  style=font-family:'romantic'>
 
 
-  <h2>My</h2>
-  <h2>College</h2>
-  <h2 >Decisions</h2>
+  <h3>My</h3>
+  <h3>College</h3>
+  <h3 >Decisions</h3>
 
   
   </body>
-  <img src="https://giphy.com/gifs/thegifys-gifys-5xaOcLGvzHxDKjufnLW" alt="dancing kids"  img-align: right;>
+  <img src="https://giphy.com/gifs/thegifys-gifys-5xaOcLGvzHxDKjufnLW" alt="dancing kids" align="right">
 <input type="checkbox" checkable=false checked/><p>UCRiverside</p>
 </html>
