--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
 
   
   </body>
-  <img src="https://giphy.com/gifs/thegifys-gifys-5xaOcLGvzHxDKjufnLW" alt="dancing kids" align="right">
+  <img src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExcHl5NWJmNHY1cW5sc2FydGFqbDU0dXJqZGJxaGxzMnIycDhkempieCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9cw/MZ6YXwBmYRY1W/giphy.gif" alt="dancing squid" align="right">
 <input type="checkbox" checkable=false checked/><p>UCRiverside</p>
 </html>
